# Crioulo

./: .gitignore  CMakeLists.txt  README.md
cmake/: GenerateShaderHeaders.cmake
cmake/scripts/: shader2header.py
include/crioulo/: camera.h  global_context_manager.h  init.h  light.h  material.h  mesh.h  mesh_instance.h  pool_allocator.h  renderer.h  shader.h  texture.h
include/crioulo/internal/: debug_gl.h  primitive_shapes.h
include/crioulo/internal/util/: include_shaders.h
include/glad/: glad.h
include/stb_include/: stb_include.h
shaders/: pbr.glsl
shaders/internal/: skybox.frag  skybox.vert
src/: glad.c
src/core/: camera.h  global_context_manager.cpp  init.cpp  material.h  mesh.h  mesh_instance.h  renderer.cpp  renderer.h  shader.h
src/stb_include/: stb_include.cpp
src/util/: include_shaders.cpp  pool_allocator.cpp
